--- a/exercise.html
+++ b/exercise.html
@@ -14,6 +14,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="Start your FREE guided breathwork session. Follow the simple visual guide and timer to practice techniques like Box Breathing or Wim Hof. Find calm now!">
     <title>Breathing Exercise</title>
+
+     <!-- Standard favicon links -->
+  <link rel="icon" href="/favicon.ico" sizes="any"> <!-- Fallback ICO -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  
+  <!-- iOS specific -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  
+  <!-- Optional: Android/Web App Manifest -->
+  <link rel="manifest" href="/site.webmanifest"> 
+  <!-- <meta name="theme-color" content="#ffffff"> -->
+
     <link rel="stylesheet" href="styles/exercise.css">
 </head>
 <body>
