--- a/about.html
+++ b/about.html
@@ -14,6 +14,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Learn about Simple Breathwork. Our mission is to provide FREE, accessible, science-backed breathwork exercises. Explore the benefits & practice guides.">
     <title>About Us - Simple Breathwork</title>
+    <!-- Standard favicon links -->
+  <link rel="icon" href="/favicon.ico" sizes="any"> <!-- Fallback ICO -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  
+  <!-- iOS specific -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  
+  <!-- Optional: Android/Web App Manifest -->
+  <link rel="manifest" href="/site.webmanifest"> 
+  <!-- <meta name="theme-color" content="#ffffff"> -->
+
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/about.css">
     <script>
