--- a/feedback.html
+++ b/feedback.html
@@ -14,6 +14,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Have feedback for Simple Breathwork? Use our quick form to share your thoughts, report issues, or suggest new features for our free breathwork exercises.">
     <title>Share Feedback - Simple Breathwork</title>
+    
+     <!-- Standard favicon links -->
+  <link rel="icon" href="/favicon.ico" sizes="any"> <!-- Fallback ICO -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  
+  <!-- iOS specific -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  
+  <!-- Optional: Android/Web App Manifest -->
+  <link rel="manifest" href="/site.webmanifest"> 
+  <!-- <meta name="theme-color" content="#ffffff"> -->
+
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/feedback.css">
     </head>
