--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Find FREE, easy-to-follow visual guides for breathwork exercises like Box Breathing, 4-8 Zen & Wim Hof. Reduce stress & anxiety instantly. Start now!">
         <title>Simple Breathwork</title>
+        
+         <!-- Standard favicon links -->
+  <link rel="icon" href="/favicon.ico" sizes="any"> <!-- Fallback ICO -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  
+  <!-- iOS specific -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  
+  <!-- Optional: Android/Web App Manifest -->
+  <link rel="manifest" href="/site.webmanifest"> 
+  <!-- <meta name="theme-color" content="#ffffff"> -->
+        
         <link rel="stylesheet" href="styles/main.css">
         <link rel="stylesheet" href="styles/feedback.css">
         <meta name="google-adsense-account" content="ca-pub-8592180021114462">
