--- a/terms.html
+++ b/terms.html
@@ -135,6 +135,9 @@
             <a href="terms.html">Terms of Use</a>
             <button onclick="window.location.href='feedback.html'">Share Feedback</button>
         </div>
+        <div class="copyright">
+            © <span id="copyright-year">2024</span> simplebreathwork.com All Rights Reserved.
+        </div>
 </footer>
 </body>
 </html>
