html and css animation
fixed animation using google AI studio

--- a/exercise.html
+++ b/exercise.html
@@ -2,30 +2,25 @@
 <html lang="en" data-theme="light">
 <head>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-6E6Q283JEH"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-6E6Q283JEH');
-</script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6E6Q283JEH"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-6E6Q283JEH');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="Start your FREE guided breathwork session. Follow the simple visual guide and timer to practice techniques like Box Breathing or Wim Hof. Find calm now!">
     <title>Breathing Exercise</title>
 
-     <!-- Standard favicon links -->
-  <link rel="icon" href="/favicon.ico" sizes="any"> <!-- Fallback ICO -->
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  
-  <!-- iOS specific -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  
-  <!-- Optional: Android/Web App Manifest -->
-  <link rel="manifest" href="/site.webmanifest"> 
-  <!-- <meta name="theme-color" content="#ffffff"> -->
+    <!-- Standard favicon links -->
+    <link rel="icon" href="/favicon.ico" sizes="any">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <!-- Assuming you have a manifest file -->
+    <link rel="manifest" href="/site.webmanifest">
 
     <link rel="stylesheet" href="styles/exercise.css">
 </head>
@@ -38,14 +33,16 @@
                         <div class="main-text"></div>
                         <div class="sub-text"></div>
                     </div>
-                    <div class="breathing-indicator">
+                    <!-- Ensure your indicators are here if needed -->
+                        <div class="breathing-indicator"> 
                         <div class="arrow-up"></div>
-                        <div class="arrow-down"></div>
-                    </div>
+                        <div class="arrow-down"></div> 
+                     </div> 
                 </div>
             </div>
             <div class="timer"></div>
         </div>
+        <!-- Keeping original onclick for now - address later if CSP requires removal -->
         <button class="exit-btn" onclick="window.location.href='index.html'">Exit</button>
     </div>
     <script src="scripts/exercise.js"></script>
