--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
                 </div>
                 <ul class="nav-menu">
                     <li><a href="index.html">Home</a></li>
+                    <li><a href="blog.html">Blog</a></li> 
+                    <li><a href="exercise.html">Breathwork</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="privacy.html">Privacy Policy</a></li>
                     <li><a href="terms.html">Terms of Use</a></li>
@@ -174,6 +176,8 @@
 <footer>
     <div class="links">
         <a href="index.html">Home</a>
+        <a href="blog.html">Blog</a>
+        <a href="exercise.html">Breathwork</a>
         <a href="about.html">About Us</a>
         <a href="privacy.html">Privacy Policy</a>
         <a href="terms.html">Terms of Use</a>
