--- a/privacy.html
+++ b/privacy.html
@@ -32,12 +32,29 @@
 </head>
 <body>
     <header>
-        <h1>Privacy Policy</h1>
-        <nav>
-            <button id="theme-toggle" class="theme-toggle" aria-label="Switch theme">
-                🌙 Night Mode
-            </button>
-        </nav>
+            <nav class="navbar">
+                <div class="nav-container">
+                    <a href="#" class="logo">Simple Breathwork</a>
+                    <div class="hamburger">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <ul class="nav-menu">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="blog.html">Blog</a></li> 
+                        <li><a href="exercise.html">Breathwork</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="privacy.html">Privacy Policy</a></li>
+                        <li><a href="terms.html">Terms of Use</a></li>
+                        <li><button onclick="window.location.href='feedback.html'">Share Feedback</button></li>
+                    </ul>
+                    <button id="theme-toggle" class="theme-toggle" aria-label="Switch theme">
+                        🌙 Night Mode
+                    </button>
+                </div>
+            </nav>
+            <h1>Privacy Policy</h1>
     </header>
 
     <main class="legal-container">
@@ -160,6 +177,8 @@
     <footer>
         <div class="links">
             <a href="index.html">Home</a>
+            <a href="blog.html">Blog</a>
+        <a href="exercise.html">Breathwork</a>
             <a href="about.html">About Us</a>
             <a href="privacy.html">Privacy Policy</a>
             <a href="terms.html">Terms of Use</a>
