--- a/about.html
+++ b/about.html
@@ -60,7 +60,13 @@
         </nav>
     </header>
 
-    <main class="about-container">
+    <main>
+        <!-- Add after navbar -->
+<div class="page-hero">
+    <h1>About Us</h1>
+    <p>Learn more about Simple Breathwork and our mission</p>
+</div>  
+    <div class="about-container">
         <section class="about-content">
             <h2>Welcome to Simple Breathwork</h2>
             <p>At Simple Breathwork, we harness the power of scientifically validated breathing techniques to enhance your well-being. Our mission is to provide accessible breathwork exercises that are grounded in research, helping you reduce stress, improve mental clarity, and promote emotional balance.</p>
@@ -182,6 +188,7 @@
         <div class="techniques-grid">
             <!-- Technique cards with expandable details -->
         </div>
+        </div>  
     </main>
     <script src="scripts/main.js"></script>
     <script src="scripts/about.js"></script>
@@ -199,5 +206,7 @@
             © <span id="copyright-year">2024</span> simplebreathwork.com All Rights Reserved.
         </div>
     </footer>
+    <!-- Add before closing body tag in about.html, privacy.html, terms.html, feedback.html, and blog.html -->
+<script src="scripts/page.js"></script>
 </body>
 </html>
