--- a/terms.html
+++ b/terms.html
@@ -81,10 +81,15 @@
                 </button>
             </div>
         </nav> 
-        <h1Terms of Use</h1>
 </header>
 
-    <main class="legal-container">
+    <main>
+        <!-- Add after navbar -->
+<div class="page-hero">
+    <h1>Terms of Use</h1>
+    <p>Guidelines for using Simple Breathwork</p>
+</div>
+<div class="legal-container">
         <div class="legal-content">
             <p class="last-updated">Last Updated: April 5, 2025</p>
 
@@ -142,6 +147,7 @@
                 </div>
             </section>
         </div>
+</div>
     </main>
 <script src="scripts/main.js"></script>
  <footer>
@@ -158,5 +164,7 @@
             © <span id="copyright-year">2024</span> simplebreathwork.com All Rights Reserved.
         </div>
 </footer>
+<!-- Add before closing body tag in about.html, privacy.html, terms.html, feedback.html, and blog.html -->
+<script src="scripts/page.js"></script>
 </body>
 </html>
