--- a/feedback.html
+++ b/feedback.html
@@ -55,10 +55,14 @@
                 </button>
             </div>
         </nav>
-        <h1>Feedback form</h1>
     </header>
 
     <main>
+        <!-- Add after navbar -->
+<div class="page-hero">
+    <h1>Share Your Feedback</h1>
+    <p>Help us improve your breathing experience</p>
+</div>
         <div class="feedback-container">
             <div class="form-wrapper">
                 <form id="feedbackForm" class="feedback-form">
@@ -140,5 +144,7 @@
             © <span id="copyright-year">2024</span> simplebreathwork.com All Rights Reserved.
         </div>
     </footer>
+    <!-- Add before closing body tag in about.html, privacy.html, terms.html, feedback.html, and blog.html -->
+<script src="scripts/page.js"></script>
 </body>
 </html>
