--- a/privacy.html
+++ b/privacy.html
@@ -54,10 +54,15 @@
                     </button>
                 </div>
             </nav>
-            <h1>Privacy Policy</h1>
     </header>
 
-    <main class="legal-container">
+    <main>
+        <!-- Add after navbar -->
+<div class="page-hero">
+    <h1>Privacy Policy</h1>
+    <p>How we protect and handle your information</p>
+</div>
+<div class="legal-container">
         <div class="legal-content">
             <p class="last-updated">Last Updated: 08 April 2025</p>
 
@@ -172,6 +177,7 @@
                 </div>
             </section>
         </div>
+</div>
     </main>
 
     <footer>
@@ -208,5 +214,7 @@
             updateTheme(savedTheme);
         });
     </script>
+    <!-- Add before closing body tag in about.html, privacy.html, terms.html, feedback.html, and blog.html -->
+<script src="scripts/page.js"></script>
  </body>
 </html>
