components folder added

--- a/index.html
+++ b/index.html
@@ -14,11 +14,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Find FREE, easy-to-follow visual guides for breathwork exercises like Box Breathing, 4-8 Zen & Wim Hof. Reduce stress & anxiety instantly. Start now!">
         <title>Simple Breathwork</title>
-        
-         <!-- Standard favicon links -->
-  <link rel="icon" href="/favicon.ico" sizes="any"> <!-- Fallback ICO -->
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   
   <!-- iOS specific -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -33,28 +28,8 @@
     </head>
 <body>
     <header>
-        <nav class="navbar">
-            <div class="nav-container">
-                <a href="#" class="logo">Simple Breathwork</a>
-                <div class="hamburger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-                <ul class="nav-menu">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="blog.html">Blog</a></li> 
-                    <li><a href="exercise.html">Breathwork</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="privacy.html">Privacy Policy</a></li>
-                    <li><a href="terms.html">Terms of Use</a></li>
-                    <li><button onclick="window.location.href='feedback.html'">Share Feedback</button></li>
-                </ul>
-                <button id="theme-toggle" class="theme-toggle" aria-label="Switch theme">
-                    🌙 Night Mode
-                </button>
-            </div>
-        </nav>
+        <div id="header-placeholder">
+    </div>
     </header>
         <main>
             <div class="hero">
@@ -174,19 +149,9 @@
     </main>
 
 <footer>
-    <div class="links">
-        <a href="index.html">Home</a>
-        <a href="blog.html">Blog</a>
-        <a href="exercise.html">Breathwork</a>
-        <a href="about.html">About Us</a>
-        <a href="privacy.html">Privacy Policy</a>
-        <a href="terms.html">Terms of Use</a>
-        <button onclick="window.location.href='feedback.html'">Share Feedback</button>
-    </div>
-    <div class="copyright">
-    © <span id="copyright-year">2024</span> simplebreathwork.com All Rights Reserved.
-   </div>
+    <div id="footer-placeholder"></div>
 </footer>
+<script src="scripts/template-loader.js"></script>
 <script defer src="scripts/app.js"></script>
 </body>
 </html>
