--- a/blog.html
+++ b/blog.html
@@ -1,34 +1,47 @@
+<!-- Users/bea/Documents/GitHub/Simplebreathwork-web-app/blog.html -->
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Breathwork articles and guides">
+    <meta name="description" content="Breathwork articles and guides from Simple Breathwork">
     <title>Blog - Simple Breathwork</title>
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/blog.css">
+    <!-- Link to the main stylesheet -->
+    <link rel="stylesheet" href="/styles/main.css">
+    <!-- Link to specific styles for the blog index page -->
+    <link rel="stylesheet" href="/styles/blog.css">
 </head>
 <body>
     <header>
+        <!-- Header component will be loaded here by template-loader.js -->
         <div id="header-placeholder"></div>
     </header>
-    
-    <main class="blog-page">
+
+    <!-- Use the common container class for consistent page width/padding -->
+    <main class="container">
+
+        <!-- Blog page header section -->
         <div class="blog-header">
-            <h1>Breathwork Insights</h1>
-            <p>Discover the science and benefits of conscious breathing</p>
+            <h1>Blog Articles</h1>
+            <!-- Optional: Add a short tagline if desired -->
+            <!-- <p>Insights and guides on conscious breathing</p> -->
         </div>
-        
+
+        <!-- Container for dynamically loaded blog posts -->
+        <!-- The ID 'blog-posts-container' is used by app.js (loadAllBlogArticles) -->
         <div class="blog-grid" id="blog-posts-container">
-            <!-- Posts will be loaded dynamically -->
+        <!-- Placeholder text shown while articles are loading -->
+            <p>Loading articles...</p>
         </div>
+
     </main>
 
     <footer>
+        <!-- Footer component will be loaded here by template-loader.js -->
         <div id="footer-placeholder"></div>
     </footer>
 
-    <script src="scripts/template-loader.js"></script>
-    <script type="module" src="scripts/blog-loader.js"></script>
+    <!-- Main script loader - loads components, data, app.js, and initializes UI -->
+    <script src="/scripts/template-loader.js"></script>
 </body>
 </html>
