--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
         <article class="article-card">
             <div class="article-content">
                 <span class="article-category">Breathing Technique</span>
-                <h3 class="article-title">Understanding Belly Breathing</h3>
+                <h3 class="article-title">Wim Hof Breathing Method</h3>
                 <p class="article-excerpt">
-                    Learn the fundamentals of belly breathing and discover how this simple technique can reduce stress and improve your overall well-being...
+                    Learn the fundamentals of Wim Hof breathing method and discover how this simple technique can improve your overall well-being...
                 </p>
-                <a href="#" class="article-link">Read More →</a>
+                <a href="/blog/wim-hof-breathing.html" class="article-link">Read More →</a>
             </div>
         </article>
         <!-- Add more article cards as needed -->
