added front matter to each html

--- a/blog.html
+++ b/blog.html
@@ -1,3 +1,11 @@
+---
+layout: base.html
+title: Blog - Simple Breathwork
+description: Explore articles on breathwork techniques, benefits, and science.
+additional_head_content: '<link rel="stylesheet" href="/styles/blog.css">'
+additional_scripts: '' # No page-specific scripts identified for blog index
+---
+
 <!-- Users/bea/Documents/GitHub/Simplebreathwork-web-app/blog.html -->
 
     <!-- Use the common container class for consistent page width/padding -->
