--- a/privacy.html
+++ b/privacy.html
@@ -1,60 +1,11 @@
-<!DOCTYPE html>
-<html lang="en" data-theme="light">
-<head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-6E6Q283JEH"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+---
+layout: base.html
+title: Privacy Policy - Simple Breathwork
+description: Understand how Simple Breathwork collects, uses, and protects your personal information.
+additional_head_content: '<link rel="stylesheet" href="/styles/legal.css">' # Assuming common style for legal pages
+additional_scripts: ''
+---
 
-  gtag('config', 'G-6E6Q283JEH');
-</script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Simple Breathwork Privacy Policy: Understand how we collect, use & protect your data. Details on information handling, cookies, AdSense & your GDPR rights.">
-    <title>Privacy Policy - Simple Breathwork</title>
-    
-     <!-- Standard favicon links -->
-  <link rel="icon" href="/favicon.ico" sizes="any"> <!-- Fallback ICO -->
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  
-  <!-- iOS specific -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  
-  <!-- Optional: Android/Web App Manifest -->
-  <link rel="manifest" href="/site.webmanifest"> 
-  <!-- <meta name="theme-color" content="#ffffff"> -->
-    
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/legal.css">
-</head>
-<body>
-    <header>
-            <nav class="navbar">
-                <div class="nav-container">
-                    <a href="#" class="logo">Simple Breathwork</a>
-                    <div class="hamburger">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
-                    <ul class="nav-menu">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="blog.html">Blog</a></li> 
-                        <li><a href="exercise.html">Breathwork</a></li>
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="privacy.html">Privacy Policy</a></li>
-                        <li><a href="terms.html">Terms of Use</a></li>
-                        <li><button onclick="window.location.href='feedback.html'">Share Feedback</button></li>
-                    </ul>
-                    <button id="theme-toggle" class="theme-toggle" aria-label="Switch theme">
-                        🌙 Night Mode
-                    </button>
-                </div>
-            </nav>
-    </header>
 
     <main>
         <!-- Add after navbar -->
@@ -179,42 +130,3 @@
         </div>
 </div>
     </main>
-
-    <footer>
-        <div class="links">
-            <a href="index.html">Home</a>
-            <a href="blog.html">Blog</a>
-        <a href="exercise.html">Breathwork</a>
-            <a href="about.html">About Us</a>
-            <a href="privacy.html">Privacy Policy</a>
-            <a href="terms.html">Terms of Use</a>
-            <button onclick="window.location.href='feedback.html'">Share Feedback</button>
-        </div>
-        <div class="copyright">
-            © <span id="copyright-year">2024</span> simplebreathwork.com All Rights Reserved.
-        </div>
-    </footer>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const themeToggle = document.getElementById('theme-toggle');
-                        function updateTheme(theme) {
-                document.documentElement.setAttribute('data-theme', theme);
-                localStorage.setItem('theme', theme);
-               themeToggle.textContent = theme === 'light' ? '🌙 Night Mode' : '☀️ Day Mode';
-            }
-
-             themeToggle.addEventListener('click', () => {
-                const currentTheme = document.documentElement.getAttribute('data-theme');
-                const newTheme = currentTheme === 'light' ? 'dark' : 'light';
-                updateTheme(newTheme);
-            });
-
-           const savedTheme = localStorage.getItem('theme') || 'light';
-            updateTheme(savedTheme);
-        });
-    </script>
-    <!-- Add before closing body tag in about.html, privacy.html, terms.html, feedback.html, and blog.html -->
-<script src="scripts/page.js"></script>
- </body>
-</html>
