amended about hero

--- a/about.html
+++ b/about.html
@@ -6,9 +6,14 @@ additional_head_content: '<link rel="stylesheet" href="/styles/about.css">' # As
 additional_scripts: ''
 ---
 
-    <h1>About Us</h1>
-    <p>Learn more about Simple Breathwork and our mission</p>
-</div>  
+<main class="container page-content"> <!-- Added standard container classes -->
+
+    <!-- Fixed Hero Section -->
+    <div class="page-hero">
+        <h1>About Us</h1>
+        <p>Learn more about Simple Breathwork and our mission</p>
+    </div>
+    <!-- Removed stray closing </div> tag -->
     <div class="about-container">
         <section class="about-content">
             <h2>Welcome to Simple Breathwork</h2>
