--- a/index.html
+++ b/index.html
@@ -104,10 +104,11 @@ additional_scripts: '' # No page-specific scripts identified for index
     <section class="blog-container">
         <h2 class="section-title">Latest Articles</h2>
         <div class="articles-grid">
-            {% for post in collections.post %}
+            {% assign latestPosts = collections.post | reverse | limit: 3 %}
+            {% for post in latestPosts %}
                 <article class="article-card">
                     <div class="article-content">
-                        <span class="article-category">Breathing Technique</span>
+                        <span class="article-category">{{ post.data.category | default: "Breathing Technique" }}</span>
                         <h3 class="article-title">{{ post.data.title }}</h3>
                         <p class="article-excerpt">
                             {{ post.data.description }}
@@ -115,7 +116,9 @@ additional_scripts: '' # No page-specific scripts identified for index
                         <a href="{{ post.url }}" class="article-link">Read More →</a>
                     </div>
                 </article>
+            {% else %}
+                <p>No articles found yet.</p> 
             {% endfor %}
         </div>
-            </section>
+    </section>
         </main>
