--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ additional_scripts: '' # No page-specific scripts identified for index
     <section class="blog-container">
         <h2 class="section-title">Latest Articles</h2>
         <div class="articles-grid">
-            {% assign latestPosts = collections.post | reverse | limit: 3 %}
+            {% assign latestPosts = collections.post | limit: 3 %}
             {% for post in latestPosts %}
                 <article class="article-card">
                     <div class="article-content">
