--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ additional_scripts: '' # No page-specific scripts identified for index
         <h2 class="section-title">Latest Articles</h2>
         <div class="articles-grid">
             <!-- Reverse the collection first (latest first), then limit to 3 -->
-            {% assign latestPosts = collections.post | reverse | limit: 3 %}
+            {% assign latestPosts = collections.post | reverse | slice: 0, 3 %}
             {% for post in latestPosts %}
                 <article class="article-card">
                     <div class="article-content">
