--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: base.html
 title: Simple Breathwork - Calm Your Mind, Energize Your Body
 description: Simple Breathwork homepage providing overview and links to techniques.
-additional_head_content: '<link rel="stylesheet" href="/styles/index.css">'
+additional_head_content: '<link rel="stylesheet" href="/styles/main.css">'
 additional_scripts: '' # No page-specific scripts identified for index
 ---
 
