--- a/blog.html
+++ b/blog.html
@@ -3,10 +3,10 @@ layout: base.html
 title: Blog - Simple Breathwork
 description: Explore articles on breathwork techniques, benefits, and science.
 additional_head_content: '<link rel="stylesheet" href="/styles/blog.css">'
-additional_scripts: '' # No page-specific scripts identified for blog index
+# You might want to include your app.js script here as it might contain other
+# global initialization logic, even if it doesn't load the article list anymore.
+# additional_scripts: '<script src="/scripts/app.js"></script>'
 ---
-
-<!-- Users/bea/Documents/GitHub/Simplebreathwork-web-app/blog.html -->
 
     <!-- Use the common container class for consistent page width/padding -->
     <main class="container">
@@ -18,14 +18,46 @@ additional_scripts: '' # No page-specific scripts identified for blog index
             <!-- <p>Insights and guides on conscious breathing</p> -->
         </div>
 
-        <!-- Container for dynamically loaded blog posts -->
-        <!-- The ID 'blog-posts-container' is used by app.js (loadAllBlogArticles) -->
+        <!-- Container for server-rendered blog posts -->
+        <!-- The ID 'blog-posts-container' is kept, but content is NOT dynamically loaded here anymore -->
         <div class="blog-grid" id="blog-posts-container">
-        <!-- Placeholder text shown while articles are loading -->
-            <p>Loading articles...</p>
+
+            {# --- Start Liquid Loop to list all blog articles --- #}
+            {# Get the 'post' collection. Assuming 'post' is the collection name configured in .eleventy.js #}
+            {# You can add filters here, e.g., | reverse to show newest first, | limit: 10 for pagination #}
+            {% assign allPosts = collections.post | reverse %} 
+
+            {% if allPosts.length > 0 %} {# Check if there are any posts in the collection #}
+                {# Iterate through each post found in the collection #}
+                {% for post in allPosts %}
+                    {# --- Start Article Card HTML --- #}
+                    {# Adapt this structure to match the articles-grid and article-card HTML from your index.html #}
+                    <article class="article-card">
+                        <div class="article-content">
+                            {# You can use Front Matter data here, e.g., post.data.category #}
+                            <span class="article-category">{{ post.data.category | default: "Breathing Technique" }}</span> 
+                            {# Use the post's title from Front Matter #}
+                            <h3 class="article-title">{{ post.data.title }}</h3>
+                            {# Use the post's description (excerpt) from Front Matter #}
+                            <p class="article-excerpt">
+                                {{ post.data.description }}
+                            </p>
+                            {# --- Crucially, use {{ post.url }} for the link --- #}
+                            <a href="{{ post.url }}" class="article-link">Read More →</a>
+                        </div>
+                    </article>
+                    {# --- End Article Card HTML --- #}
+                {% endfor %}
+            {% else %} {# If the collection is empty #}
+                <p>No articles found yet.</p> 
+            {% endif %}
+            {# --- End Liquid Loop --- #}
+
         </div>
 
     </main>
 
-    <!-- Main script loader - loads components, data, app.js, and initializes UI -->
+    {# You removed the script loader tag from here. Ensure it's included in your base.html #}
+    {# For example, the <script src="/scripts/template-loader.js"></script> should be in base.html #}
+    {# And template-loader.js should load app.js if needed for other functionalities. #}
 </html>
