--- a/blog.html
+++ b/blog.html
@@ -22,36 +22,36 @@ additional_head_content: '<link rel="stylesheet" href="/styles/blog.css">'
         <!-- The ID 'blog-posts-container' is kept, but content is NOT dynamically loaded here anymore -->
         <div class="blog-grid" id="blog-posts-container">
 
-            {# --- Start Liquid Loop to list all blog articles --- #}
+            <!--- Start Liquid Loop to list all blog articles --- #}
             {# Get the 'post' collection. Assuming 'post' is the collection name configured in .eleventy.js #}
-            {# You can add filters here, e.g., | reverse to show newest first, | limit: 10 for pagination #}
+            {# You can add filters here, e.g., | reverse to show newest first, | limit: 10 for pagination -->
             {% assign allPosts = collections.post | reverse %} 
 
             {% if allPosts.length > 0 %} {# Check if there are any posts in the collection #}
-                {# Iterate through each post found in the collection #}
+                <!-- Iterate through each post found in the collection -->
                 {% for post in allPosts %}
-                    {# --- Start Article Card HTML --- #}
+                    <!-- --- Start Article Card HTML --- -->
                     {# Adapt this structure to match the articles-grid and article-card HTML from your index.html #}
                     <article class="article-card">
                         <div class="article-content">
-                            {# You can use Front Matter data here, e.g., post.data.category #}
+                            <!-- You can use Front Matter data here, e.g., post.data.category -->
                             <span class="article-category">{{ post.data.category | default: "Breathing Technique" }}</span> 
-                            {# Use the post's title from Front Matter #}
+                            <!-- Use the post's title from Front Matter -->
                             <h3 class="article-title">{{ post.data.title }}</h3>
-                            {# Use the post's description (excerpt) from Front Matter #}
+                            <!--- Use the post's description (excerpt) from Front Matter -->
                             <p class="article-excerpt">
                                 {{ post.data.description }}
                             </p>
-                            {# --- Crucially, use {{ post.url }} for the link --- #}
+                            <!----- Crucially, use {{ post.url }} for the link --- -->
                             <a href="{{ post.url }}" class="article-link">Read More →</a>
                         </div>
                     </article>
-                    {# --- End Article Card HTML --- #}
+                    <!-- --- End Article Card HTML --- -->
                 {% endfor %}
             {% else %} {# If the collection is empty #}
                 <p>No articles found yet.</p> 
             {% endif %}
-            {# --- End Liquid Loop --- #}
+            <!-- --- End Liquid Loop --- #}-->
 
         </div>
 
