--- a/blog.html
+++ b/blog.html
@@ -44,7 +44,7 @@ additional_head_content: '<link rel="stylesheet" href="/styles/blog.css">'
                     </article>
                     {% for post in allPosts %}
                 {# ... article card HTML ... #}
-            {% endfor %} <!--{# This is the line closing the loop #}-->
+            {% endfor %} 
         {% else %}
             <p>No articles found yet.</p>
         {% endif %}
