--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@ title: Blog - Simple Breathwork
 description: Explore articles on breathwork techniques, benefits, and science.
 additional_head_content: '<link rel="stylesheet" href="/styles/blog.css">'
 <!-- Keep this commented out unless you specifically need app.js for blog index page interactions -->
-<!-- additional_scripts: '<script src="/scripts/app.js"></script>' -->
+additional_scripts: <script src="/scripts/app.js"></script>
 ---
 
     <!-- Use the common container class for consistent page width/padding -->
@@ -69,4 +69,3 @@ additional_head_content: '<link rel="stylesheet" href="/styles/blog.css">'
 
 <!-- Make sure your base.html loads template-loader.js after the body content, before </body> -->
 <!-- For example: <script src="/scripts/template-loader.js"></script> -->
- 
