--- a/blog.html
+++ b/blog.html
@@ -3,8 +3,9 @@ layout: base.html
 title: Blog - Simple Breathwork
 description: Explore articles on breathwork techniques, benefits, and science.
 additional_head_content: '<link rel="stylesheet" href="/styles/blog.css">'
-<!-- Keep this commented out unless you specifically need app.js for blog index page interactions -->
-additional_scripts: <script src="/scripts/app.js"></script>
+# Keep this commented out unless you specifically need app.js on the blog index itself
+# additional_scripts: '<script src="/scripts/app.js"></script>' # <-- Add quotes
+additional_scripts: ''
 ---
 
     <!-- Use the common container class for consistent page width/padding -->
